<resources>
    <string name="app_name" translatable="false">gistroom</string>
    <string name="action_settings">Settings</string>
    <string name="message">Read and share stories</string>
    <string name="button">Start gisting!</string>
    <string name="sign_in">Sign in with</string>
    <string name="title_activity_feeds">FeedsActivity</string>
    <string name="title_activity_feedsList">FeedsListActivity</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="twitter" translatable="false">Twitter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_social">Social</string>
    <string name="nav_trending">Trending</string>
    <string name="nav_starred">Starred</string>
    <string name="nav_share">Share</string>
    <string name="nav_settings">Settings</string>
    <string name="search">Search</string>

    <string name="compose_gist_title">New Gist</string>
    <string name="compose_gist_hint">What\'s the latest gist?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
