<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in"
        android:text="@string/sign_in"
        android:layout_marginTop="177dp"
        android:textSize="24sp"
        android:textColor="#000000"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/facebook_button"
        android:layout_below="@id/sign_in"
        android:gravity="center"
        android:text="@string/facebook"
        android:textSize="20sp"
        android:background="#4a5691"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/twitter_button"
        android:gravity="center"
        android:text="@string/twitter"
        android:textSize="20sp"
        android:background="#80e7ea"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/facebook_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>