<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ireolaniyan.gistroom.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:background="#f3fa7a">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/title_textView"
        android:fontFamily="casual"
        android:textSize="64sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:fontFamily="casual"
        android:id="@+id/textView"
        android:textSize="28sp"
        android:layout_below="@id/title_textView"
        android:layout_marginTop="110dp"
        android:layout_centerInParent="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:fontFamily="casual"
        android:id="@+id/start_button"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"/>
        <!-- android:background="#ffffff" -->
</RelativeLayout>
